--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^3.0.1",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "dependencies": "0.0.1",
+    "truffle-assertions": "^0.9.2",
     "truffle-flattener": "^1.4.4"
   }
 }
